tests/fixtures/invalid/pow_none_int_int.py
# Cannot call pow() with None, Int, Int
x = pow(None, 1, 1)
